--- a/src/styles/globalStyles.css
+++ b/src/styles/globalStyles.css
@@ -52,7 +52,7 @@ body {
 
 @media (max-width: 700px) {
   .container {
-    max-width: 43rem;
+    /* max-width: 43rem; */
     margin: 0 1rem;
   }
 }
