--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -71,8 +71,8 @@
     height: 10vh;
     padding: 0 10px 0 10px;
     border-radius: var(--radius-2);
-
-    background-color: var(--color-grey-4);
+    border: 2px solid var(--color-grey-4);
+    background-color: var(--color-grey-5);
     
     display: flex;
     align-items: center;
@@ -112,9 +112,17 @@
 }
 
 .card__type{
-    padding: 3px;
+    padding: 3px 5px 3px 5px;
+
     background-color: var(--color-grey-4);
     border-radius: var(--radius-2);
+    text-align: center;
+}
+
+.card__right{
+    display: flex;
+    align-items: center;
+    gap: 20px;
 }
 
 .card__button{
